[package]
name = "oasis-ethwasi-runtime-api"
version = "0.2.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[dependencies]
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v21.1" }

ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_bytes = "0.11.5"
thiserror = "1.0"
