[package]
name = "oasis-ethwasi-runtime-common"
version = "0.3.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
# Oasis Core.
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.9" }
oasis-core-keymanager-client = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.9" }

# Openethereum.
ethcore = { git = "https://github.com/second-state/openethereum.git", branch = "oasis"}
account-state = { git = "https://github.com/second-state/openethereum.git", branch = "oasis"}
spec = { git = "https://github.com/second-state/openethereum.git", branch = "oasis"}
vm = { git = "https://github.com/second-state/openethereum.git", branch = "oasis"}
keccak-hasher = { git = "https://github.com/second-state/openethereum.git", branch = "oasis"}

# Parity.
keccak-hash = "0.5.1"
kvdb = "0.5.0"
ethereum-types = { version = "0.9.2", default-features = false, features = ["std", "serialize"] }

# Others.
anyhow = "1.0"
elastic-array = "0.10"
io-context = "0.2.0"
lazy_static = "1.3.0"
zeroize = "0.10"
hash-db = "0.15.2"

[features]
default = []
benchmarking = []
production-genesis = []
test = []


