[package]
name = "oasis-ethwasi-runtime-common"
version = "0.3.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
# Oasis Core.
oasis-core-keymanager-client = { path = "../../oasis-core/keymanager-client" }
oasis-core-runtime = { path = "../../oasis-core/runtime" }

# Parity.
ethcore = { path = "../../oasis-parity/ethcore" }
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
hashdb = { path = "../../oasis-parity/util/hashdb" }
keccak-hash = { path = "../../oasis-parity/util/hash" }
vm = { path = "../../oasis-parity/ethcore/vm" }

# Others.
anyhow = "1.0"
elastic-array = "0.10"
io-context = "0.2.0"
lazy_static = "1.3.0"
zeroize = "0.10"

[features]
default = []
benchmarking = []
production-genesis = []
test = []
