[package]
name = "web3-gateway"
version = "0.1.0"
authors = ["root"]

[dependencies]
log = "0.3"
slog = "2.4.1"
parking_lot = "0.5"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.1"
fdlimit = "0.1"
signal-hook = "0.1.8"
prometheus = { version = "0.8", features = ["push"] }
jsonrpc-core = "14.2.0"
jsonrpc-derive = "14.2.2"
jsonrpc-http-server = "14.2.0"
jsonrpc-ws-server = "14.2.0"
jsonrpc-macros = "10.1.0"
jsonrpc-pubsub = "14.2.0"
lazy_static = "1.3.0"
wasmi = "0.4"

# Openethereum
ethcore = { git = "https://github.com/second-state/openethereum.git", branch = "oasis"}
common-types = { git = "https://github.com/second-state/openethereum.git", branch = "oasis"}
machine = { git = "https://github.com/second-state/openethereum.git", branch = "oasis"}
vm = { git = "https://github.com/second-state/openethereum.git", branch = "oasis"}
account-state = { git = "https://github.com/second-state/openethereum.git", branch = "oasis"}
parity-rpc = { git = "https://github.com/second-state/openethereum.git", branch = "oasis"}

# Parity
hash-db = "0.15.2"
keccak-hash = "0.5.1"
ethereum-types = { version = "0.9.2", default-features = false, features = ["std", "serialize"] }
rlp = "0.4.5"

## Common functionality between runtime and gateway
oasis-ethwasi-runtime-common = { path = "../common" }

## Oasis Core client dependencies.
oasis-core-client = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.9" }
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.9" }
oasis-core-keymanager-client = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.9" }
oasis-ethwasi-runtime-api = { path = "../api" }

anyhow = "1.0"
clap = "2.29.1"
grpcio = { version = "0.4.4", features = ["openssl"] }
io-context = "0.2.0"
rand = "0.4"
tokio = "0.1.17"
tokio-threadpool = "0.1.14"

[build-dependencies]
rustc_version = "0.2"

[dev-dependencies]
hex = "0.3"

[features]
default = ["pubsub"]
pubsub = []
production-genesis = ["oasis-ethwasi-runtime-common/production-genesis"]
benchmarking = ["oasis-ethwasi-runtime-common/benchmarking"]

[[bin]]
name = "gateway"
path ="bin/main.rs"
