[package]
name = "web3-gateway"
version = "0.3.0"
license = "GPL-3.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>", "Parity Technologies <admin@parity.io>"]

[dependencies]
ethcore = { path="../../oasis-parity/ethcore" }
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
fdlimit = "0.1"
futures = "0.1"
jsonrpc-core = { git = "https://github.com/oasislabs/jsonrpc.git", branch = "hyper-v0.12" }
jsonrpc-http-server = { git = "https://github.com/oasislabs/jsonrpc.git", branch = "hyper-v0.12" }
jsonrpc-macros = { git = "https://github.com/oasislabs/jsonrpc.git", branch = "hyper-v0.12" }
jsonrpc-pubsub = { git = "https://github.com/oasislabs/jsonrpc.git", branch = "hyper-v0.12" }
jsonrpc-ws-server = { git = "https://github.com/oasislabs/jsonrpc.git", branch = "hyper-v0.12" }
keccak-hash = { path = "../../oasis-parity/util/hash" }
lazy_static = "1.3.0"
log = "0.4"
mem = { path = "../../oasis-parity/util/mem" }
parity-reactor = { path = "../../oasis-parity/util/reactor" }
parity-rpc = { path = "../../oasis-parity/rpc" }
parking_lot = "0.5"
prometheus = { version = "0.8", features = ["push"] }
rlp = { path = "../../oasis-parity/util/rlp" }
serde = "1.0"
serde_bytes = "0.11"
serde_derive = "1.0"
serde_json = "1.0"
signal-hook = "0.1.8"
slog = "2.4.1"
wasmi = "0.4"

## Common functionality between runtime and gateway
oasis-ethwasi-runtime-common = { path = "../common" }

## Oasis Core client dependencies.
oasis-core-client = { path = "../../oasis-core/client" }
oasis-core-keymanager-client = { path = "../../oasis-core/keymanager-client" }
oasis-core-runtime = { path = "../../oasis-core/runtime" }
oasis-ethwasi-runtime-api = { path = "../api" }

anyhow = "1.0"
clap = "2.29.1"
grpcio = { version = "0.4.4", features = ["openssl"] }
io-context = "0.2.0"
rand = "0.4"
tokio = "0.1.17"
tokio-threadpool = "0.1.14"

[build-dependencies]
rustc_version = "0.2"

[dev-dependencies]
hex = "0.3"

[features]
default = ["pubsub"]
pubsub = []
production-genesis = ["oasis-ethwasi-runtime-common/production-genesis"]
benchmarking = ["oasis-ethwasi-runtime-common/benchmarking"]

[[bin]]
name = "gateway"
path ="bin/main.rs"
