[package]
name = "genesis"
version = "0.3.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
oasis-ethwasi-runtime-common = { path = "../common" }

oasis-core-client = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.9" }
oasis-core-runtime = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.9" }


# Openethereum.
ethcore = { git = "https://github.com/second-state/openethereum.git", branch = "oasis"}
spec = { git = "https://github.com/second-state/openethereum.git", branch = "oasis"}
account-state = { git = "https://github.com/second-state/openethereum.git", branch = "oasis"}

# Parity.
ethereum-types = { version = "0.9.2", default-features = false, features = ["std", "serialize"] }
rlp = "0.4.5"

# Others.
hex = "0.4.2"
clap = "2.29.1"
filebuffer = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_bytes = "~0.10"
grpcio = "0.4.4"
io-context = "0.2.0"

[[bin]]
name = "genesis-init"
path ="bin/genesis_init.rs"

[[bin]]
name = "genesis-playback"
path ="bin/genesis_playback.rs"
