[package]
name = "genesis"
version = "0.3.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
oasis-ethwasi-runtime-common = { path = "../common" }

oasis-core-client = { path = "../../oasis-core/client" }
oasis-core-runtime = { path = "../../oasis-core/runtime" }

clap = "2.29.1"
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
filebuffer = "0.4.0"
hex = "0.3.1"
rlp = { path = "../../oasis-parity/util/rlp" }
ethcore = { path = "../../oasis-parity/ethcore" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_bytes = "~0.10"
grpcio = "0.4.4"
io-context = "0.2.0"

[[bin]]
name = "genesis-init"
path ="bin/genesis_init.rs"

[[bin]]
name = "genesis-playback"
path ="bin/genesis_playback.rs"
