[package]
name = "oasis-ethwasi-runtime-keymanager"
version = "0.3.0-alpha"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[package.metadata.fortanix-sgx]
heap-size = 134217728
stack-size = 2097152
threads = 2

[dependencies]
oasis-core-keymanager-api-common  = { path = "../../oasis-core/keymanager-api-common" }
oasis-core-keymanager-lib = { path = "../../oasis-core/keymanager-lib" }
oasis-core-runtime = { path = "../../oasis-core/runtime" }

[build-dependencies]
oasis-core-tools = { git = "https://github.com/oasisprotocol/oasis-core", tag = "v20.9" }

[features]
benchmarking = []
